--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -1,9 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Setup"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
+    "!git clone https://github.com/sithu31296/image-classification\r\n",
+    "%cd image-classification\r\n",
+    "%pip install -r requirements.txt\r\n",
+    "\r\n",
     "import torch"
    ],
    "outputs": [],
