--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "from models import get_model\r\n",
     "\r\n",
-    "model = get_model('rest', 'B', pretrained='checkpoints/rest/rest_base.pth')\r\n",
+    "model = get_model('rest', 'B', pretrained=None)\r\n",
     "image = torch.randn(1, 3, 224, 224)\r\n",
     "output = model(image)\r\n",
     "output.shape"
