--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "from tools.show import show_models\r\n",
     "\r\n",
@@ -42,17 +42,17 @@
      "text": [
       "Model Names    Model Variants\n",
       "-------------  --------------------------------\n",
-      "resnet         ['18', '34', '50', '101', '152']\n",
-      "xcit           ['T', 'S', 'M', 'L']\n",
-      "cswin          ['T', 'S', 'B', 'L']\n",
-      "volo           ['D1', 'D2', 'D3', 'D4']\n",
-      "gfnet          ['T', 'S', 'B']\n",
-      "pvtv2          ['B1', 'B2', 'B3', 'B4', 'B5']\n",
-      "shuffle        ['T', 'S', 'B']\n",
-      "rest           ['S', 'B', 'L']\n",
-      "conformer      ['T', 'S', 'B']\n",
-      "vip            ['S', 'M', 'L']\n",
-      "cyclemlp       ['B1', 'B2', 'B3', 'B4', 'B5']\n"
+      "ResNet         ['18', '34', '50', '101', '152']\n",
+      "MicroNet       ['M1', 'M2', 'M3']\n",
+      "GFNet          ['T', 'S', 'B']\n",
+      "PVTv2          ['B1', 'B2', 'B3', 'B4', 'B5']\n",
+      "ResT           ['S', 'B', 'L']\n",
+      "Conformer      ['T', 'S', 'B']\n",
+      "Shuffle        ['T', 'S', 'B']\n",
+      "CSWin          ['T', 'S', 'B', 'L']\n",
+      "CycleMLP       ['B1', 'B2', 'B3', 'B4', 'B5']\n",
+      "XciT           ['T', 'S', 'M', 'L']\n",
+      "VOLO           ['D1', 'D2', 'D3', 'D4']\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
    "source": [
     "from models import get_model\r\n",
     "\r\n",
-    "model = get_model('rest', 'B', pretrained=None)\r\n",
+    "model = get_model('ResT', 'B', pretrained=None)\r\n",
     "image = torch.randn(1, 3, 224, 224)\r\n",
     "output = model(image)\r\n",
     "output.shape"
@@ -87,6 +87,19 @@
      "metadata": {},
      "execution_count": 5
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Load a Model with Pretrained Weights\r\n",
+    "\r\n",
+    "Download a model's weights from [Model Zoo](https://github.com/sithu31296/image-classification#model-zoo) and place it in a folder.\r\n",
+    "\r\n",
+    "```python\r\n",
+    "model = get_model('ResT', 'B', pretrained='checkpoints/rest/rest_base.pth')\r\n",
+    "```"
    ],
    "metadata": {}
   },
