--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,136 +2,112 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Setup"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "source": [
-    "!git clone https://github.com/sithu31296/image-classification\r\n",
-    "%cd image-classification\r\n",
-    "%pip install -r requirements.txt\r\n",
-    "\r\n",
-    "import torch"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Show Available Models"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "source": [
-    "from tools.show import show_models\r\n",
-    "\r\n",
-    "show_models()"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Model Names    Model Variants\n",
-      "-------------  --------------------------------\n",
-      "ResNet         ['18', '34', '50', '101', '152']\n",
-      "MicroNet       ['M1', 'M2', 'M3']\n",
-      "GFNet          ['T', 'S', 'B']\n",
-      "PVTv2          ['B1', 'B2', 'B3', 'B4', 'B5']\n",
-      "ResT           ['S', 'B', 'L']\n",
-      "Conformer      ['T', 'S', 'B']\n",
-      "Shuffle        ['T', 'S', 'B']\n",
-      "CSWin          ['T', 'S', 'B', 'L']\n",
-      "CycleMLP       ['B1', 'B2', 'B3', 'B4', 'B5']\n",
-      "XciT           ['T', 'S', 'M', 'L']\n",
-      "VOLO           ['D1', 'D2', 'D3', 'D4']\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Load a Model"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "from models import get_model\r\n",
-    "\r\n",
-    "model = get_model('ResT', 'B', pretrained=None)\r\n",
-    "image = torch.randn(1, 3, 224, 224)\r\n",
-    "output = model(image)\r\n",
-    "output.shape"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 1000])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Load a Model with Pretrained Weights\r\n",
-    "\r\n",
-    "Download a model's weights from [Model Zoo](https://github.com/sithu31296/image-classification#model-zoo) and place it in a folder.\r\n",
-    "\r\n",
-    "```python\r\n",
-    "model = get_model('ResT', 'B', pretrained='checkpoints/rest/rest_base.pth')\r\n",
-    "```"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "!git clone https://github.com/sithu31296/sota-backbones\n",
+    "%cd sota-backbones\n",
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Show Available Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python list_models.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load a Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models import *\n",
+    "\n",
+    "model_name = \"VAN\"\n",
+    "model = eval(model_name)('S', pretrained=None)\n",
+    "image = torch.randn(1, 3, 224, 224)\n",
+    "output = model(image)\n",
+    "output.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load a Model with Pretrained Weights\n",
+    "\n",
+    "Download a model's weights from [Model Zoo](https://github.com/sithu31296/sota-backbones#model-zoo) and place it in a folder.\n",
+    "\n",
+    "```python\n",
+    "model = get_model('ResT', 'B', pretrained='checkpoints/rest/rest_base.pth')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "aea83569919be5773004d169c584d4ca51033e3a1bacc6aba24d8e7d3bf3b930"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.0 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.5",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.5 64-bit"
-  },
-  "interpreter": {
-   "hash": "78184fe1b8a3f830767e8814b2b01c36fc7c8ac521e39cb583cd3fce210fee57"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
