--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -71,10 +71,10 @@
    "source": [
     "## Load a Model with Pretrained Weights\n",
     "\n",
-    "Download a model's weights from [Model Zoo](https://github.com/sithu31296/sota-backbones#model-zoo) and place it in a folder.\n",
+    "Download a model's weights from [Model Zoo](https://github.com/sithu31296/sota-backbones#benchmarks) and place it in a folder.\n",
     "\n",
     "```python\n",
-    "model = get_model('ResT', 'B', pretrained='checkpoints/rest/rest_base.pth')\n",
+    "model = eval(\"VAN\")('S', pretrained='checkpoints/van_small_811.pth.tar')\n",
     "```"
    ]
   },
